--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -9,42 +9,16 @@
 }
 
 :root {
-  --dark: #1d1d1d;
-  --grey-dark: #414141;
-  --light: #fff;
-  --mid: #ededed;
-  --grey: #989898;
-  --gray: #989898;
-  --green: #28a92b;
-  --green-dark: #4e9815;
-  --green-light: #6fb936;
-  --blue: #2c7ad2;
-  --purple: #8d3dae;
-  --red: #c82736;
-  --orange: #e77614;
-  accent-color: var(--green);
+  --dark: #191919;
+  --grey-dark: #222222;
+  --light: #FBFBFB;
+  --mid: #EEEEEE;
+  --grey: #D4D4D4;
+  --gray: #BBBBBB;
+  --color-surface-white: #FBFBFB;
+  accent-color: var(--dark);
 }
 
-/* colors */
-.green {
-  background-color: var(--green);
-}
-
-.blue {
-  background-color: var(--blue);
-}
-
-.purple {
-  background-color: var(--purple);
-}
-
-.red {
-  background-color: var(--red);
-}
-
-.orange {
-  background-color: var(--orange);
-}
 
 .dark {
   background-color: var(--dark);
@@ -153,7 +127,7 @@
   }
 }
 
-:root {
+/* :root {
   --f-0-min: 16;
   --f-0-max: 18;
   --step-0: calc(
@@ -183,7 +157,7 @@
   --step-4: calc(
     ((var(--f-4-min) / 16) * 1rem) + (var(--f-4-max) - var(--f-4-min)) * var(--fluid-bp)
   );
-}
+} */
 
 /* Base styles */
 html,
@@ -355,46 +329,6 @@ a.active {
   margin-top: 1em;
 }
 
-/* Box components */
-.box {
-  width: 75px;
-  height: 75px;
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: var(--green);
-  font-weight: 600;
-  color: var(--dark);
-  line-height: 1.2;
-  will-change: transform;
-}
-
-.circle {
-  width: 75px;
-  height: 75px;
-  border-radius: 99px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: var(--green);
-  font-weight: 600;
-  color: var(--dark);
-  line-height: 1.2;
-  will-change: transform;
-}
-
-.boxes-container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 1rem;
-}
 
 /* Code styles */
 code {
